@@ -1,3 +1,7 @@
+2002-04-17  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/27_io/filebuf_virtuals.cc: Add _S_pback_size instantiation.
+
 2002-04-16  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* src/concept-inst.cc (vector<locale::facet*>): Remove instantiations.
